// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`flows.webInputs get 1`] = `
{
  "headers": {
    "accept": "*/*",
    "accept-encoding": "gzip,deflate",
    "connection": "close",
    "host": "flows.globus.org",
    "user-agent": "node-fetch/1.0 (+https://github.com/bitinn/node-fetch)",
  },
  "method": "GET",
  "url": "https://flows.globus.org/web_inputs/web-input-id",
}
`;

exports[`flows.webInputs getAll 1`] = `
{
  "headers": {
    "accept": "*/*",
    "accept-encoding": "gzip,deflate",
    "connection": "close",
    "host": "flows.globus.org",
    "user-agent": "node-fetch/1.0 (+https://github.com/bitinn/node-fetch)",
  },
  "method": "GET",
  "url": "https://flows.globus.org/web_inputs",
}
`;

exports[`flows.webInputs respond 1`] = `
{
  "headers": {
    "accept": "*/*",
    "accept-encoding": "gzip,deflate",
    "connection": "close",
    "content-length": "15",
    "content-type": "application/json",
    "host": "flows.globus.org",
    "user-agent": "node-fetch/1.0 (+https://github.com/bitinn/node-fetch)",
  },
  "method": "POST",
  "url": "https://flows.globus.org/web_inputs/web-input-id/response",
}
`;
